--- a/web/test.html
+++ b/web/test.html
@@ -13,6 +13,7 @@
 
         #qContainer {
             width: 50%;
+            float: right;
         }
 
         #led div {
@@ -23,12 +24,12 @@
 <body>
 
     <div id="qContainer">
-        <h2 style="width: 100%; text-align: center; margin: 1em;">KOLEJKA</h2>
-        <ol id="queue" style="float: right"></ol>
+        <h2 style="width: 100%; text-align: center; margin: .4em;">KOLEJKA</h2>
+        <ol id="queue"></ol>
     </div>
 
     <div id="sContainer">
-        <h2 style="width: 100%; text-align: center; margin: 1em;">POŁĄCZENIE Z SERWEREM</h2>
+        <h2 style="width: 100%; text-align: center; margin: .4em;">POŁĄCZENIE Z SERWEREM</h2>
         <div id="status">-> Ładowanie adresu sterownika..<br/></div>
     </div>
     <br/><br/><br/>
