--- a/web/test.html
+++ b/web/test.html
@@ -5,23 +5,56 @@
     <title>Test lights GUI</title>
 
     <style>
-        #relays, #led, #qContainer, #sContainer {
+        #qContainer, #sContainer, #bot, #avrContainer {
             padding: 1em;
             border: 1px solid;
             width: 40%;
         }
 
-        #qContainer {
+        #qContainer, #bot {
             width: 50%;
             float: right;
+        }
+
+        #bot {
+            margin-bottom: 1em;
+        }
+
+        #status {
+            overflow-y: scroll;
+            height: 420px;
         }
 
         #led div {
             margin: 1em;
         }
+
+        #relays, #led {
+            padding: 1em;
+            border: 1px dashed;
+        }
+
+        .botInstance * {
+            margin: .5em;
+        }
     </style>
 </head>
 <body>
+
+    <div id="bot">
+        <h2 style="width: 100%; text-align: center; margin: .4em;">TEST BOT</h2>
+        <div class="botInstance">
+            <label for="botInterval_R">Interwał zmiany przekaźników:</label>
+            <input type="number" id="botInterval_R" value="1">
+            <button id="botStarter_R">START!</button>
+        </div>
+
+        <div class="botInstance">
+            <label for="botInterval_L">Interwał zmiany koloru: </label>
+            <input type="number" id="botInterval_L" value="1">
+            <button id="botStarter_L">START!</button>
+        </div>
+    </div>
 
     <div id="qContainer">
         <h2 style="width: 100%; text-align: center; margin: .4em;">KOLEJKA</h2>
@@ -32,31 +65,32 @@
         <h2 style="width: 100%; text-align: center; margin: .4em;">POŁĄCZENIE Z SERWEREM</h2>
         <div id="status">-> Ładowanie adresu sterownika..<br/></div>
     </div>
-    <br/><br/><br/>
+    <br/><br/>
 
-    <div id="relays"></div>
-    <br/>
-    <div id="led">
-        <div>
-            <label for="ledR">Czerwony</label>
-            <input type="number" id="ledR"/>
+    <div id="avrContainer">
+        <h2 style="width: 100%; text-align: center; margin: .4em;">PANEL STEROWANIA</h2>
+        <div id="relays"></div>
+        <br/>
+        <div id="led">
+            <div>
+                <label for="ledR">Czerwony</label>
+                <input type="number" id="ledR"/>
+            </div>
+
+            <div>
+                <label for="ledG">Zielony</label>
+                <input type="number" id="ledG"/>
+            </div>
+
+            <div>
+                <label for="ledB">Niebieski</label>
+                <input type="number" id="ledB"/>
+            </div>
+
+            <button id="sendLED">Zmień kolor</button>
         </div>
-
-        <div>
-            <label for="ledG">Zielony</label>
-            <input type="number" id="ledG"/>
-        </div>
-
-        <div>
-            <label for="ledB">Niebieski</label>
-            <input type="number" id="ledB"/>
-        </div>
-
-        <button id="sendLED">Zmień kolor</button>
     </div>
-
 </body>
-
 <script>
     const REST_API = 'http://robertbrzoza.pl:8000/';
     init(REST_API);
@@ -116,6 +150,13 @@
     }
 
     let conn = null;
+    let loadingStepsExecuted = 0;
+    function _loadingSteps() {
+        loadingStepsExecuted++;
+        if(loadingStepsExecuted >= 6) {
+            setStatus('-> Przechodzenie do trybu RAW..');
+        }
+    }
 
     function init(restApi) {
         let req = new XMLHttpRequest();
@@ -134,11 +175,15 @@
                         setStatus('<- Połączono z serwerem sterownika!');
                         conn.onmessage = function(e) {
                             var response = JSON.parse(e.data);
-                            console.log(response);
+                            if(loadingStepsExecuted >= 6) {
+                                setStatus('<< <i>'+JSON.stringify(response, null, '?').replace(/\n/g, '<br/>').replace(/\?/g, '&nbsp;&nbsp;')+'</i>', 'IN');
+                            }
+
                             if(!isNaN(response.channel)) {
                                 if(response.status === 'current') {
                                     setStatus('<- Otrzymano i załadowano aktualny stan przekaźnika '+response.channel+' ['+(response.state ? 'ON' : 'OFF')+']');
                                     setButtonState(response.channel, response.state);
+                                    _loadingSteps();
                                 }
                                 if(response.status === 'added') {
                                     addChangeStateToQueue(response);
@@ -153,6 +198,7 @@
                                 if(response.status === 'current') {
                                     setStatus('<- Otrzymano i załadowano aktualny kolor LED ['+response.r+', '+response.g+', '+response.b+']');
                                     setLEDState(response.r, response.g, response.b);
+                                    _loadingSteps();
                                 }
 
                                 if(response.status === 'added') {
@@ -167,6 +213,7 @@
 
                             if(response.queue) {
                                 initQueue(response.queue);
+                                _loadingSteps();
                             }
                         };
                     };
@@ -178,7 +225,7 @@
     }
 
     document.getElementById('sendLED').onclick = function() {
-        conn.send(JSON.stringify({
+        _send({
             controller: 'ChangeColor',
             value: {
                 id: _uniqid(),
@@ -186,8 +233,13 @@
                 g: document.getElementById('ledG').value,
                 b: document.getElementById('ledB').value
             }
-        }));
+        });
     };
+
+    function _send(data) {
+        setStatus('>> <i>'+JSON.stringify(data, null, '?').replace(/\n/g, '<br/>').replace(/\?/g, '&nbsp;&nbsp;')+'</i>', 'OUT');
+        conn.send(JSON.stringify(data));
+    }
 
     function loadRelays(restApi, callback) {
         setStatus('-> Ładowanie kanałów przekaźników..');
@@ -216,20 +268,30 @@
         req.send();
     }
 
-    function setStatus(status) {
-        document.getElementById('status').innerHTML += status+'<br/>';
+    function setStatus(status, theme) {
+        let html = status+'<br/>';
+
+        if(theme && theme === 'IN') {
+            html = '<div style="background: rgba(0,255,98, .2); padding: 1em; margin: .1em;">'+status+'</div>';
+        } else if(theme && theme === 'OUT') {
+            html = '<div style="background: rgba(0,209,255, .2)">'+status+'</div>';
+        }
+
+        let $status = document.getElementById('status');
+        $status.innerHTML += html;
+        $status.scrollTop = $status.scrollHeight;
     }
 
     function supportChannelStateChange(button) {
         button.onclick = function() {
-            conn.send(JSON.stringify({
+            _send({
                 controller: 'ChangeState',
                 value: {
                     id: _uniqid(),
                     channel: button.dataset.id,
                     state: button.style.background !== 'darkgreen'
                 }
-            }));
+            });
         };
     }
 
@@ -241,5 +303,66 @@
         }
         return s4() + 'L' + s4() + 'I' + s4() + 'G' + s4() + 'H' + s4() + 'T' + s4() + 'S' + s4();
     }
+</script>
+
+
+<script>
+    let relayBot = null;
+    let LEDBot = null;
+
+    // TEST BOT
+    document.getElementById('botStarter_R').onclick = function() {
+        this.innerHTML = this.innerHTML === 'START!' ? 'STOP!' : 'START!';
+
+        if(this.innerHTML === 'STOP!') {
+            console.info('RELAYS BOT: Started!');
+            relayBot = setInterval(
+                _doRelayBotChange,
+                document.getElementById('botInterval_R').value * 1000
+            );
+        } else {
+            clearInterval(relayBot);
+            console.info('RELAYS BOT: Stopped!');
+        }
+    };
+
+    document.getElementById('botStarter_L').onclick = function() {
+        this.innerHTML = this.innerHTML === 'START!' ? 'STOP!' : 'START!';
+
+        if(this.innerHTML === 'STOP!') {
+            console.info('LED BOT: Started!');
+            LEDBot = setInterval(
+                _doLEDBotChange,
+                document.getElementById('botInterval_L').value * 1000
+            );
+        } else {
+            clearInterval(LEDBot);
+            console.info('LED BOT: Stopped!');
+        }
+    };
+
+    function _doRelayBotChange() {
+        let channel = (Math.floor(Math.random() * 4) + 1) - 1;
+        let $button = document.querySelector('button[data-id="'+channel+'"]');
+        $button.click();
+
+        let state = $button.style.background === 'darkgreen';
+        console.log('RELAYS BOT: Channel '+channel+' switched to '+(state ? 'ON' : 'OFF'));
+    }
+
+    function _doLEDBotChange() {
+        let r = (Math.floor(Math.random() * 256) + 1) - 1;
+        let g = (Math.floor(Math.random() * 256) + 1) - 1;
+        let b = (Math.floor(Math.random() * 256) + 1) - 1;
+
+        document.getElementById('ledR').value = r;
+        document.getElementById('ledG').value = g;
+        document.getElementById('ledB').value = b;
+
+        document.getElementById('sendLED').click();
+
+        console.log('LED BOT: Color switched to: '+r+', '+g+', '+b);
+    }
+
 </script>
 </html>
