fix color picker loading

--- a/web/test.html
+++ b/web/test.html
@@ -38,7 +38,7 @@
             margin: .5em;
         }
     </style>
-    <script src="jscolor.js"></script>
+    <script src="?ctrl=_test_js_color"></script>
     <script>
         function rgbToHex(rgb) {
             let hex = Number(rgb).toString(16);
